# Fencing-Video-Research-Agent

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
.docs/decisions/: README.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_phase1_metadata_schema.py
docs/: data-model.md  frontend-demo.md  manual-smoke-test.md  project-brief.md
docs/decisions/: 0001-lightweight-clean-architecture-foundation.md  0002-sqlite-sqlalchemy-alembic-persistence-foundation.md  0003-repository-and-unit-of-work-boundaries.md  0004-official-youtube-data-api-adapter.md  0005-cli-composition-and-controlled-collection.md  0006-read-only-video-inspection-commands.md  0007-read-only-collection-run-inspection-commands.md  0008-manual-review-annotation-workflow.md  0009-pandas-backed-export-workflow.md  0010-search-hit-provenance-export.md  0011-read-only-fastapi-api.md  0012-react-vite-mui-frontend-skeleton.md  0013-react-mui-read-only-tables.md  0014-browser-annotation-editing.md  0015-browser-metadata-collection.md  README.md
docs/research/: research-report.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  theme.ts
src/fencing_video_research_agent/: bootstrap.py
tests/: test_bootstrap.py  test_package_import.py
tests/api/: conftest.py  test_collection_runs.py  test_cors.py  test_health.py  test_runs.py  test_search_hits.py  test_summary.py  test_video_annotation_update.py  test_videos.py
tests/application/: test_annotate_videos.py  test_collect_videos.py  test_export_search_hits.py  test_export_videos.py  (+1 more)
(+77 files in other folders)
