[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fencing-video-research-agent"
version = "0.1.0"
description = "A research application for collecting and organizing fencing-video metadata."
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "google-api-python-client>=2,<3",
    "SQLAlchemy>=2,<3",
    "alembic>=1.13,<2",
    "pandas>=3,<4",
    "typer>=0.12,<1",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "python-dotenv>=1,<2",
    "isodate>=0.7,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-cov>=5,<8",
    "ruff>=0.9,<1",
    "mypy>=1.10,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["fencing_video_research_agent"]
warn_unused_configs = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "googleapiclient.*",
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["fencing_video_research_agent"]

[tool.coverage.report]
show_missing = true
skip_covered = true


